fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,11 @@
 .read-the-docs {
   color: #888;
 }
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
